# clang-format-config-checker

./: CMakeLists.txt  main.cpp
